<resources>
    <string name="app_name">QuizQuest</string>
    <string name="quiz_quest">Quiz Quest</string>
    <string name="start">START</string>
    <string name="zeroScore">0</string>
    <string name="use_hint">Use Hint</string>
    <string name="default_time">00:20</string>
    <string name="answer">ANSWER</string>
    <string name="placeholder_question">placeholder question</string>
    <string name="help_leaderboard">What is the Leaderboard?</string>
    <string name="help_msg">Every week, all players compete to get to the top of the leaderboard,
    since the 3 highest ranked players get the coolest inventory items for their sprites!\n\nThe leaderboard
        resets all scores to zero at the end of the week, so hurry up and do a quiz!</string>
    <string name="congratulations_quiz_completed"><b>Congratulations!\nQuiz Completed</b></string>
    <string name="performance"><u>Performance:</u></string>
    <string name="questions_correct">Questions correct: %d</string>
    <string name="continue_string">Continue</string>
    <string name="points">Points: %d</string>
    <string name="coins">Coins: %d</string>
    <string name="games_msg">You\'ve completed your 3 quizzes for today!</string>
    <string name="questionLabel">Question</string>
    <string name="answerLabel">Answer</string>
    <string name="categoryLabel">Category</string>
    <string name="incorrectLabel">Incorrect Answers</string>
    <string name="submissions">Submissions</string>
    <string name="submitAQ">Submit a Question</string>
    <string name="prevSubs">Previous Submissions</string>
    <string name="submitBtn">Submit</string>
    <string name="maintain_store">Maintain Store</string>
    <string name="administrator">Administrator</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="store">Store</string>
    <string name="upper">Upper</string>
    <string name="lower">Lower</string>
    <string name="accessories">Accessories</string>
    <string name="logout">Log out</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="placeholder">Placeholder</string>
    <string name="ldb_points">%d points</string>
    <string name="ldb_level">Level: %d</string>
    <string name="quiz_num_for_today">Quiz %d/3 for today</string>
    <string name="total_coins">Coins: %d></string>
    <string name="games_played">Games played: %d</string>
    <string name="dialog_title">Sprite?</string>
    <string name="sprite_desc">Each player gets a character "sprite", which is kind of like a mini avatar. Throughout the game you can purchase items for your sprite such as clothing or accesories. You will also be able to earn special items for your sprite.</string>

    <string-array name="categories">
        <item>Entertainment</item>
        <item>Sports</item>
        <item>General Knowledge</item>
        <item>History</item>
        <item>Geography</item>
        <item>Literature</item>
        <item>Science</item>
        <item>Technology</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>