<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Store_screen" >

  <TextView
      android:id="@+id/lblStore"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/store"
      style = "@style/heading"/>

  <com.google.android.material.tabs.TabLayout
      android:id="@+id/tabLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upper" />

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lower" />

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accessories" />
  </com.google.android.material.tabs.TabLayout>

  <androidx.viewpager2.widget.ViewPager2
      android:id="@+id/viewPager2"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />
</LinearLayout>