<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8ECA8218"
    tools:context=".PlayerPerformance">

    <TextView
        android:id="@+id/coinsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/default_font"
        android:text="@string/coins"
        app:layout_constraintStart_toStartOf="@+id/questionsCorrectTxt"
        app:layout_constraintTop_toBottomOf="@+id/pointsTxt" />

    <TextView
        android:id="@+id/pointsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/default_font"
        android:text="@string/points"
        app:layout_constraintStart_toStartOf="@+id/questionsCorrectTxt"
        app:layout_constraintTop_toBottomOf="@+id/questionsCorrectTxt" />

    <Button
        android:id="@+id/performanceBtn"
        android:layout_width="163dp"
        android:layout_height="56dp"
        android:layout_marginBottom="50dp"
        android:background="@color/orange"
        android:fontFamily="@font/default_font"
        android:onClick="returnMainMenu"
        android:text="@string/continue_string"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/quizCompletedTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/default_font"
        android:gravity="center"
        android:text="@string/congratulations_quiz_completed"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizCompletedTxt"
        app:srcCompat="@drawable/spooderman" />

    <TextView
        android:id="@+id/performanceTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/default_font"
        android:text="@string/performance"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/questionsCorrectTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/default_font"
        android:text="@string/questions_correct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/performanceTxtView" />

</androidx.constraintlayout.widget.ConstraintLayout>