<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".Admin_screen">

    <Button
        android:id="@+id/btnMaintainStore"
        style="@style/light_button"
        android:onClick="storeClick"
        android:text="@string/maintain_store"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />

    <TextView

        android:id="@+id/adminHeading"
        style="@style/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:text="@string/administrator"
        app:layout_constraintBottom_toTopOf="@+id/btnViewSubmissions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <Button
        android:id="@+id/btnViewSubmissions"
        style="@style/light_button"
        android:layout_marginBottom="48dp"
        android:onClick="submissionsClick"
        android:text="@string/submissions"
        app:layout_constraintBottom_toTopOf="@+id/btnMaintainStore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="180dp"
        android:layout_height="132dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toTopOf="@+id/adminHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376"
        app:srcCompat="@drawable/mainlogo" />

    <Button
        android:id="@+id/btnAdminLogOut"
        style="@style/light_button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:onClick="logOutClick"
        android:text="@string/logout"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMaintainStore" />
</androidx.constraintlayout.widget.ConstraintLayout>