<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/lightBackground"
    tools:context=".AdminStore_screen">

    <TextView

        android:id="@+id/lblAdminStore"
        style="@style/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/store"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <ImageButton
        android:id="@+id/btnLeaveAdminStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:onClick="backClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvAdminStore"
        app:srcCompat="@drawable/back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAdminStore"
        android:layout_width="394dp"
        android:layout_height="421dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAdminStore" />

    <RadioGroup
        android:id="@+id/storeGroups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/rvAdminStore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAdminStore">

        <RadioButton
            android:id="@+id/rbUpper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upper"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <RadioButton
            android:id="@+id/rbLower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lower"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <RadioButton
            android:id="@+id/rbAccessores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accessories"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>