<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".Submit_screen">

    <TextView
        android:id="@+id/lblSubmitQuestion"
        style="@style/heading"
        android:layout_width="206dp"
        android:layout_height="66dp"
        android:layout_marginTop="68dp"
        android:text="@string/submitAQ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="381dp"
        android:layout_height="541dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSubmitQuestion"
        app:layout_constraintVertical_bias="0.337">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblQuestion"
                style="@style/subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/questionLabel" />

            <EditText
                android:id="@+id/txtQuestion"
                style="@style/input"
                android:layout_height="68dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:ems="10"
                android:gravity="start|center_vertical"
                android:inputType="textPersonName"
                android:maxLines="3" />

            <TextView
                android:id="@+id/lblAnswer"
                style="@style/subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/answerLabel" />

            <EditText
                android:id="@+id/txtAnswer"
                style="@style/input"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/lblCategory"
                style="@style/subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/categoryLabel" />

            <Spinner
                android:id="@+id/spnCategory"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/lblIncorrect"
                style="@style/subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/incorrectLabel" />

            <EditText
                android:id="@+id/txtIncorrect1"
                style="@style/input"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtIncorrect2"
                style="@style/input"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtIncorrect3"
                style="@style/input"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSubmit"
        style="@style/light_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="48dp"
        android:background="?attr/colorPrimary"
        android:onClick="submitClick"
        android:text="@string/submitBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnLeaveSubmit"
        style="@style/back_button"
        android:layout_marginTop="32dp"
        android:onClick="exitClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toEndOf="@+id/lblSubmitQuestion"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cross" />
</androidx.constraintlayout.widget.ConstraintLayout>